--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
    <head>
       <meta charset="utf-8">
-      <title>Cleaver</title>
+      <title>nev</title>
       <link rel="stylesheet" href="assets/main.css">
       <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Quicksand:wght@200;400&display=swap"> 
    </head>
