--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
             <source src="assets/vid.mp4" type="video/mp4">
          </video>
          <section class="fullscreen text-content">
-            <h1 style="font-family: 'Quicksand''; text-shadow: 0 0 0.40em #ff9000;">nevy.cf</h1> 
+            <h1 style="font-family: 'Quicksand''; text-shadow: 0 0 0.40em #ff9000;">nevy</h1> 
             <h2></h2>
             <p align="center"> 
-               ﹒
+               
               <a href="https://instagram.com/ice.nev" class="clean">instagram</a> |
 <a href=" https://opensea.io/ixis" class="clean">opensea</a> |
 <a href="https://twitter.com/nevnfts" class="clean">twitter</a> |
