--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               <a href="https://instagram.com/ice.nev" class="clean">instagram</a> |
 <a href=" https://opensea.io/ixis" class="clean">opensea</a> |
 <a href="https://twitter.com/nevnfts" class="clean">twitter</a> |
-<a href="https://vm.tiktok.com/ZM8vWKBHW/" class="clean">tiktok</a> |
+<a href="https://vm.tiktok.com/ZM8vWKBHW/" class="clean">tiktok</a> 
 
 
 
