--- a/index.html
+++ b/index.html
@@ -30,15 +30,15 @@
             <h2></h2>
             <p align="center"> 
                
-              <a href="https://instagram.com/ice.nev" class="clean">instagram</a> |
-<a href=" https://opensea.io/ixis" class="clean">opensea</a> |
+              <a href="https://instagram.com/ddos.nev" class="clean">instagram</a> |
+<a href=" https://opensea.io/n2c" class="clean">opensea</a> |
 <a href="https://twitter.com/nevnfts" class="clean">twitter</a> |
 <a href="https://vm.tiktok.com/ZM8vWKBHW/" class="clean">tiktok</a> 
 
 
 
 <br>
-</p><p class="clean">Discord: <a class="none">nev#6969</a></p>
+</p><p class="clean">discord: <a class="none">nev#6969 / nev#0069</a></p>
 <a id="tracktitle" class="clean"></a>
             </p> 
 
